--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 	"license": "ISC",
 	"dependencies": {
 		"@types/cors": "^2.8.17",
+		"@types/express-session": "^1.18.0",
 		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
+		"express-session": "^1.18.1",
 		"helmet": "^8.0.0",
 		"joi": "^17.13.3",
 		"jsonwebtoken": "^9.0.2",
